fix: overflow-y

--- a/packages/admin-portal/src/index.css
+++ b/packages/admin-portal/src/index.css
@@ -28,5 +28,5 @@ code {
 }
 
 .RaSidebar-fixed .MuiList-root {
-  overflow: auto !important;
+  overflow-y: auto !important;
 }
